--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "anyio>=4.6.2.post1",
+    "bcrypt>=4.2.0",
     "fastapi[standard]>=0.115.2",
     "httpx>=0.27.2",
     "pydantic>=2.9.2",
