--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,10 +16,11 @@ dependencies = [
     "bcrypt>=4.2.0",
     "fastapi[standard]>=0.115.2",
     "httpx>=0.27.2",
+    "passlib>=1.7.4",
     "pydantic>=2.9.2",
     "pyjwt>=2.9.0",
     "python-dotenv>=1.0.1",
-    "python-multipart>=0.0.13",
+    "python-multipart==0.0.12",
     "scikit-learn>=1.5.2",
     "sqlalchemy>=2.0.36",
     "trio>=0.27.0",
