--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "anyio>=4.6.2.post1",
-    "bcrypt>=4.2.0",
+    "bcrypt==4.0.0",
     "fastapi[standard]>=0.115.2",
     "httpx>=0.27.2",
     "passlib>=1.7.4",
@@ -21,6 +21,7 @@ dependencies = [
     "pyjwt>=2.9.0",
     "python-dotenv>=1.0.1",
     "python-multipart==0.0.12",
+    "ruff>=0.7.1",
     "scikit-learn>=1.5.2",
     "sqlalchemy>=2.0.36",
     "trio>=0.27.0",
